# stataudit

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  stataudit.py  stataudit_gui.py  stataudit_standalone.py
.github/workflows/: ci.yml
src/stataudit/: __init__.py  __main__.py  _cli.py  _core.py  _rules.py  auditor.py  cli.py  core.py  gui.py  models.py  report.py  rules.py
tests/: test_stataudit.py
