[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stataudit"
version = "0.1.0"
description = "Statistical reporting auditor for p-values, effect sizes, and CIs in manuscripts"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["statistics", "audit", "p-value", "reproducibility", "apa", "scientific-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

[project.scripts]
stataudit     = "stataudit:main"
stataudit-gui = "stataudit_gui:main"

[tool.setuptools]
py-modules = ["stataudit", "stataudit_gui"]
